fix canvas z-index

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -22,6 +22,7 @@ header {
 }
 canvas {
   position: absolute;
+  z-index: -5;
 }
 a {
   background: linear-gradient(
